--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Script fetches theme before useEffect does -->
+    <script>
+      document.documentElement.setAttribute("data-theme", localStorage.getItem("chat-theme") || "dark");
+    </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chat-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
   </head>
